osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_json_data/test_rejects_invalid_json_data_path.txt
error: failed to validate argument `path` for `JsonData(...)`
--> main.sml:1:25
     |
   1 | Foo: str = JsonData(path='$..')
     |                          ^ error: invalid json-path supplied